# bin-coeff-integral

./: .gitignore  CMakeLists.txt  README.md
Sources/: CMakeLists.txt  main.cpp  math.cpp  math.h  test.cpp  test.h
Sources/Utility/: CMakeLists.txt  exception_assert.cpp  exception_assert.h  is_multiprecision_int.h  string_utils.cpp  string_utils.h
